fixed the createEvent function from script2.js

--- a/hackathon/createEvent/index2.html
+++ b/hackathon/createEvent/index2.html
@@ -26,12 +26,6 @@
                 <div class="datetime-fields">
                     <label for="eventDate">Event Date:</label>
                     <input type="date" id="eventDate" name="eventDate" required>
-        
-                    <label for="startTime">Start Time:</label>
-                    <input type="time" id="startTime" name="startTime" required>
-        
-                    <label for="endTime">End Time:</label>
-                    <input type="time" id="endTime" name="endTime" required>
                 </div>
             </div>
         </div>
@@ -118,7 +112,7 @@
         <button id="exitButton">Exit</button>
         <button id="createEventButton">Create Event</button>
     </footer>
-<script src="eventData.json"></script>
+<script src="optionsData.json"></script>
 <script src="script2.js"></script>
 </body>
 </html>
