--- a/hackathon/events.html
+++ b/hackathon/events.html
@@ -8,11 +8,8 @@
 </head>
 <body>
     <h1> Events </h1>
-    <div class="project1">
-        <img src="background.jpeg">
-        <p id="name1">
-            bhenchod
-        </p>
+    <div id="projects-list">
+        
     </div>
 
 </body>
