--- a/Listings.html
+++ b/Listings.html
@@ -17,11 +17,9 @@
         <li><a href="#">About Us</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
-        <!-- <li><a href="profilepic.webp"></a></li> -->
       </ul>
       <div class="user-actions">
-        <a href="#">Sign In</a>
-      
+        <a href="#">Aryaa</a>
       </div>
     </nav>
   </header>
@@ -33,8 +31,9 @@
         <p>John Doe</p>
       </div>
       <ul>
-        <li><a href="#">My Wallet</a></li>
-        <li><a href="#">Withdraw</a></li>
+        <li><a href="wallet1.html">My Wallet</a></li>
+        <li><a href="login.html">Withdraw</a></li>
+        <li><a href="createEvent/index2.html">Create Event</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
@@ -46,7 +45,7 @@
           <input type="text" id="search-input" placeholder="Search Events">
         </div>
         <ul>
-          <li class="event-listing">
+          <!-- <li class="event-listing">
             <img src="sustainable.jpeg" alt="Event Image">
             <div class="event-details">
               <h3>Event Title</h3>
@@ -62,7 +61,7 @@
               <p>Description of another event</p>
               <p>Date and Time</p>
               <a href="#" class="read-more">Read More</a>
-            </div>
+            </div> -->
           </li>
         </ul>
       </div>
@@ -83,4 +82,3 @@
   <script src="Listings.js"></script>
 </body>
 </html>
-
