--- a/Listings.html
+++ b/Listings.html
@@ -33,7 +33,7 @@
       <ul>
         <li><a href="wallet1.html">My Wallet</a></li>
         <li><a href="login.html">Withdraw</a></li>
-        <li><a href="createEvent/index2.html">Create Event</a></li>
+        <li><a href="hackathon/createEvent/index2.html">Create Event</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
