--- a/hackathon/login.html
+++ b/hackathon/login.html
@@ -8,7 +8,7 @@
     <script src="login.js"></script>
 </head>
 <body>
-    <h1>Welcome to (App name)</h1>
+    <h1>Welcome to Sustainchain</h1>
     <div class="outer-container">
     <div class="login-container">
         
@@ -39,8 +39,9 @@
     
 </div>
 </div>
-<img src="background.jpg" alt="image button">
+<!-- <img src="background.jpg" alt="image button">
 <img src="background2.jpeg" class="two" alt="image">
-<img src="sus.jpeg" class="three" alt="image">
+<img src="sus.jpeg" class="three" alt="image"> -->
 </body>
 </html>
+
