fixed script2.js to have wallet address

--- a/hackathon/createEvent/index2.html
+++ b/hackathon/createEvent/index2.html
@@ -69,6 +69,19 @@
             </div>
         </div>
 
+        <div class="wallet-section">
+            <h2 class="section-heading">Optional Sponsorship</h2>
+            <div class="wallet-inputs">
+                <span class="description">You may be sponsored when creating an event, just tick the box, send the wallet address, and may luck bestow upon you!</span>
+                <div class="checkbox-and-input">
+                    <input type="checkbox" id="addWalletCheckbox">
+                    <label for="addWalletCheckbox">Add Wallet Address</label>
+                </div>
+                <input type="text" id="walletAddressInput" placeholder="Enter your wallet address">
+            </div>
+        </div>
+        
+
         <!-- <div class="location-section">
             <h2 class="section-heading">How is going to happen?</h2>
             <div class="location-buttons">
