--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -10,7 +10,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="profilepic.webp" alt="Logo">
+        <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
