--- a/hackathon/login.html
+++ b/hackathon/login.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Welcome to Sustainchain</h1>
+    <div class="imgc">
+        <img src="Sustainchain.png" class="img">
+    </div>
     <div class="outer-container">
     <div class="login-container">
         
