buttons hover color change side links

--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -31,7 +31,7 @@
         <img src="profilepic.webp" alt="User Profile Picture">
         <p>John Doe</p>
       </div>
-      <ul>
+      <ul class="side-links">
         <li><a href="wallet1.html">My Wallet</a></li>
         <li><a href="login.html">Withdraw</a></li>
         <li><a href="createEvent/index2.html">Create Event</a></li>
