--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -13,7 +13,7 @@
         <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="#Listings.html">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
