--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -13,14 +13,14 @@
         <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
-        <li><a href="#Listings.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
-        <li id="token-count">Loading</li>
       </ul>
       <div class="user-actions">
-        <a href="#">Aryaa</a>
+        <p id="token-count">Loading</p>
+        <a href="#" class="ar">Aryaa</a>
       </div>
     </nav>
   </header>
@@ -29,19 +29,18 @@
     <div class="sidebar">
       <div class="user-profile">
         <img src="profilepic.webp" alt="User Profile Picture">
-        <p>John Doe</p>
       </div>
-      <ul class="side-links">
-        <li><a href="wallet1.html">My Wallet</a></li>
-        <li><a href="login.html">Withdraw</a></li>
-        <li><a href="createEvent/index2.html">Create Event</a></li>
-        <li><a href="#">Settings</a></li>
+      <ul>
+        <li><a class="us" href="wallet1.html">Claim Token</a></li>
+        <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
+        <li><a class="us"href="Listings2.html">My events</a></li>
+        <li><a class="us"href="login.html">Log Out</a></li>
       </ul>
     </div>
 
     <div class="content">
       <div class="ad-listings">
-        <h1>Current Events</h1>
+        <div class="ce"><h1>Current Events</h1></div>
         <div class="search-bar">
           <input type="text" id="search-input" placeholder="Search Events">
         </div>
