Listings.html and Listings.css changes

--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -30,7 +30,7 @@
       <div class="user-profile">
         <img src="profilepic.webp" alt="User Profile Picture">
       </div>
-      <ul>
+      <ul class="side-links">
         <li><a class="us" href="wallet1.html">Claim Token</a></li>
         <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
         <li><a class="us"href="Listings2.html">My events</a></li>
