--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -30,7 +30,7 @@
       <div class="user-profile">
         <img src="profilepic.webp" alt="User Profile Picture">
       </div>
-      <ul class="side-links">
+      <ul>
         <li><a class="us" href="wallet1.html">Claim Token</a></li>
         <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
         <li><a class="us"href="Listings2.html">My events</a></li>
@@ -67,10 +67,11 @@
       </div>
 
       <div class="signed-up">
-        <h2>Your Events</h2>
-        <ul>
-          <li><h3>Code:</h3>
-            <p>123Aryaa</p> 
+        <div class="h"><h2>Your Events</h2></div>
+        <ul class="lis">
+          <li>
+            <h3 id="hs">Code:</h3>
+            <p id="hsc">123Aryaa</p> 
             <!-- <h3>Event Title (Signed Up)</h3>
             <p>Event Description</p>
             <p>Date and Time</p> -->
