--- a/hackathon/Listings2.html
+++ b/hackathon/Listings2.html
@@ -10,17 +10,17 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="profilepic.webp" alt="Logo">
+        <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
         <li><a href="Listings.html">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
-        <li id="token-count">Loading</li>
       </ul>
       <div class="user-actions">
-        <a href="#">Aryaa</a>
+        <p id="token-count">Loading</p>
+        <a href="#" class="ar">Aryaa</a>
       </div>
     </nav>
   </header>
@@ -29,22 +29,20 @@
     <div class="sidebar">
       <div class="user-profile">
         <img src="profilepic.webp" alt="User Profile Picture">
-        <p>John Doe</p>
       </div>
-      <ul>
-        <li><a href="wallet1.html">My Wallet</a></li>
-        <li><a href="login.html">Withdraw</a></li>
-        <li><a href="createEvent/index2.html">Create Event</a></li>
-        <li><a href="#">Settings</a></li>
+      <ul class="side-links">
+        <li><a class="us" href="wallet1.html">Claim Token</a></li>
+        <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
+        <li><a class="us"href="Listings.html">More events</a></li>
+        <li><a class="us"href="login.html">Log Out</a></li>
       </ul>
     </div>
 
     <div class="content">
       <div class="ad-listings">
-        <h1>Your hosted Events</h1>
+        <div class="he"><h1>Your hosted Events</h1></div>
         <div class="search-bar">
           <input type="text" id="search-input" placeholder="Search Events">
-          
         </div>
         <ul>
           
