--- a/hackathon/Listings2.html
+++ b/hackathon/Listings2.html
@@ -51,8 +51,8 @@
       </div>
 
       <div class="signed-up">
-        <h2>People</h2>
-        <h3> Total Participants: 15</h3>
+        <div class="h"><h2>People/h2></div>
+        <h3 id="hs">Total Participants: 15</h3>
         <ul>
           <li> AnkitD1</li>
           <li> HariD2</li>
