--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -13,10 +13,10 @@
         <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a class="links" href="#">Home</a></li>
+        <li><a class="links" href="#">About Us</a></li>
+        <li><a class="links" href="#">Events</a></li>
+        <li><a class="links" href="#">Contact</a></li>
       </ul>
       <div class="user-actions">
         <p id="token-count">Loading</p>
