--- a/hackathon/Listings2.html
+++ b/hackathon/Listings2.html
@@ -13,10 +13,10 @@
         <img src="Sustainchain.png" alt="Logo">
         </div>
       <ul class="nav-links">
-        <li><a href="Listings.html">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a class="links" href="Listings.html">Home</a></li>
+        <li><a class="links" href="#">About Us</a></li>
+        <li><a class="links" href="#">Events</a></li>
+        <li><a class="links" href="#">Contact</a></li>
       </ul>
       <div class="user-actions">
         <p id="token-count">Loading</p>
@@ -40,7 +40,7 @@
 
     <div class="content">
       <div class="ad-listings">
-        <div class="he"><h1>Your hosted Events</h1></div>
+        <div class="ce"><h1>Your hosted Events</h1></div>
         <div class="search-bar">
           <input type="text" id="search-input" placeholder="Search Events">
         </div>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="signed-up">
-        <div class="h"><h2>People/h2></div>
+        <div class="h"><h2>My People</h2></div>
         <h3 id="hs">Total Participants: 15</h3>
         <ul>
           <li> AnkitD1</li>
