--- a/hackathon/wallet1.html
+++ b/hackathon/wallet1.html
@@ -17,7 +17,7 @@
             <label for="amount">Amount:</label>
             <input id="amount" type="text" placeholder="Enter transfer amount">
             <br><br>
-            <button onclick="transferToken()">Transfer</button>
+            <button onclick="transferToken()">Claim Token</button>
             <br><br>
             <pre id="result"></pre>
         </div>
