--- a/hackathon/createEvent/index2.html
+++ b/hackathon/createEvent/index2.html
@@ -24,7 +24,7 @@
             <h2 class="section-heading">When is the event going to happen?</h2>
             <div class="datetime-inputs">
                 <div class="datetime-fields">
-                    <label for="eventDate">Event Date:</label>
+                    <span class="description">Event Date:s</span>
                     <input type="date" id="eventDate" name="eventDate" required>
                 </div>
             </div>
