--- a/hackathon/Listings.html
+++ b/hackathon/Listings.html
@@ -32,8 +32,9 @@
       </div>
       <ul class="side-links">
         <li><a class="us" href="wallet1.html">Claim Token</a></li>
-        <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
+        <li><a class="us" href="wallet3.html">Transfer</a></li>
         <li><a class="us"href="Listings2.html">My events</a></li>
+        <li><a class="us"href="createEvent/index2.html">Create Event</a></li>
         <li><a class="us"href="login.html">Log Out</a></li>
       </ul>
     </div>
